# incogine-studio

./: CMakeLists.txt
misc/: Info.plist
src/: main.cpp  main.mm
src/about/: AboutWindowController.h  about.mm
